force-app/main/default/objects/Contact/fields/AccountTypeAuto__c.field-meta.xml
<CustomField>
    <fullName>AccountTypeAuto__c</fullName>
    <formula>TEXT(Account.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>