force-app/main/default/objects/Contact/fields/AEContactStatus__c.field-meta.xml
<CustomField>
    <fullName>AEContactStatus__c</fullName>
    <label>AE Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not contacted</fullName>
            </value>
            <value>
                <fullName>Tried to contact</fullName>
            </value>
            <value>
                <fullName>LinkedIn Connection</fullName>
            </value>
            <value>
                <fullName>Spoken/Met</fullName>
            </value>
            <value>
                <fullName>Working with</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>