force-app/main/default/objects/Contact/fields/AEProductSpecialism__c.field-meta.xml
<CustomField>
    <fullName>AEProductSpecialism__c</fullName>
    <label>AE Product Specialism</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>Experience Cloud</fullName>
            </value>
            <value>
                <fullName>FSL</fullName>
            </value>
            <value>
                <fullName>InBox</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>Revenue Cloud (CPQ+Billing)</fullName>
            </value>
            <value>
                <fullName>NFP</fullName>
            </value>
            <value>
                <fullName>Work.com</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>Mulesoft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>