force-app/main/default/objects/Contact/fields/AERelationshipLevel__c.field-meta.xml
<CustomField>
    <fullName>AERelationshipLevel__c</fullName>
    <label>AE Relationship Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Break in</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Protect</fullName>
            </value>
            <value>
                <fullName>Priority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>