force-app/main/default/objects/Contact/fields/AESalesforceVertical__c.field-meta.xml
<CustomField>
    <fullName>AESalesforceVertical__c</fullName>
    <label>AE Salesforce Vertical</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>High Tech</fullName>
            </value>
            <value>
                <fullName>FinServ</fullName>
            </value>
            <value>
                <fullName>HLS</fullName>
            </value>
            <value>
                <fullName>Media/Comms</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>TTH - Travel, Tourism &amp; Hospitality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>