force-app/main/default/objects/Contact/fields/EMPAUAEntityRef__c.field-meta.xml
<CustomField>
    <fullName>EMPAUAEntityRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EMPAUA Entity</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>