force-app/main/default/objects/Contact/fields/EMPAUALeadly__Domain__c.field-meta.xml
<CustomField>
    <fullName>EMPAUALeadly__Domain__c</fullName>
    <formula>SUBSTITUTE(Email, LEFT(Email, FIND("@", Email)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain</label>
    <type>Text</type>
</CustomField>