force-app/main/default/objects/Contact/fields/EMPAUALeadly__EmailDomain__c.field-meta.xml
<CustomField>
    <fullName>EMPAUALeadly__EmailDomain__c</fullName>
    <label>Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>