force-app/main/default/objects/Contact/fields/HasEmailOptIn__c.field-meta.xml
<CustomField>
    <fullName>HasEmailOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt In</label>
    <type>Checkbox</type>
</CustomField>