force-app/main/default/objects/Contact/fields/IsAccountingDepartmentContact__c.field-meta.xml
<CustomField>
    <fullName>IsAccountingDepartmentContact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true, if this is not a person, but a department. This will change the name of the contact as follows:
First Name: AccountName (Customer Name)
Last Name: Accounting Team</inlineHelpText>
    <label>Accounting Department Contact</label>
    <type>Checkbox</type>
</CustomField>