force-app/main/default/objects/Contact/fields/IsInactive__c.field-meta.xml
<CustomField>
    <fullName>IsInactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>