force-app/main/default/objects/Contact/fields/IsNewContact__c.field-meta.xml
<CustomField>
    <fullName>IsNewContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Contact?</label>
    <type>Checkbox</type>
</CustomField>