force-app/main/default/objects/Contact/fields/LanguageCodeAuto__c.field-meta.xml
<CustomField>
    <fullName>LanguageCodeAuto__c</fullName>
    <formula>CASE(PreferredLanguage__c,
'English', 'en',
'Spanish', 'es',
'German', 'de',
'Preferred Language Missing')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LanguageCode</label>
    <type>Text</type>
</CustomField>