force-app/main/default/objects/Contact/fields/LastContacted__c.field-meta.xml
<CustomField>
    <fullName>LastContacted__c</fullName>
    <label>Last contacted</label>
    <type>Date</type>
</CustomField>