force-app/main/default/objects/Contact/fields/LeadSourceAdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceAdditionalInfo__c</fullName>
    <label>Lead Source Additional Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>