force-app/main/default/objects/Contact/fields/LetterSalutationFormalDEAuto__c.field-meta.xml
<CustomField>
    <fullName>LetterSalutationFormalDEAuto__c</fullName>
    <formula>CASE( Salutation ,
"Mr.","Sehr geehrter Herr",
"Ms.","Sehr geehrte Frau",
"Sehr geehrte/r Frau/Herr")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letter Salutation Formal DE</label>
    <type>Text</type>
</CustomField>