force-app/main/default/objects/Contact/fields/LetterSalutationInformalDEAuto__c.field-meta.xml
<CustomField>
    <fullName>LetterSalutationInformalDEAuto__c</fullName>
    <formula>CASE(
Salutation,
&quot;Mr.&quot;, &quot;Lieber&quot;,
&quot;Ms.&quot;, &quot;Liebe&quot;,
&quot;Liebe/r&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letter Salutation Informal DE</label>
    <type>Text</type>
</CustomField>