force-app/main/default/objects/Contact/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <inlineHelpText>This field displays all messages coming from the &quot;Contact Us&quot; form on our web</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>