force-app/main/default/objects/Contact/fields/Next_Sales_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Sales_Action__c</fullName>
    <label>Next Sales Action</label>
    <type>TextArea</type>
</CustomField>