force-app/main/default/objects/Contact/fields/NextAction__c.field-meta.xml
<CustomField>
    <fullName>NextAction__c</fullName>
    <label>Next action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>