force-app/main/default/objects/Contact/fields/NextActionDate__c.field-meta.xml
<CustomField>
    <fullName>NextActionDate__c</fullName>
    <label>Next action date</label>
    <type>Date</type>
</CustomField>