force-app/main/default/objects/Contact/fields/Pardot_Source__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Source__c</fullName>
    <description>Field populated by the default &apos;Source&apos; field in Pardot</description>
    <label>Pardot Source</label>
    <type>TextArea</type>
</CustomField>