force-app/main/default/objects/Contact/fields/Phonetic_Name__c.field-meta.xml
<CustomField>
    <fullName>Phonetic_Name__c</fullName>
    <inlineHelpText>To help pronounce the name correctly</inlineHelpText>
    <label>Phonetic Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>