force-app/main/default/objects/Contact/fields/pi__first_activity__c.field-meta.xml
<CustomField>
    <fullName>pi__first_activity__c</fullName>
    <label>Pardot First Activity</label>
    <type>DateTime</type>
</CustomField>