force-app/main/default/objects/Contact/fields/pi__grade__c.field-meta.xml
<CustomField>
    <fullName>pi__grade__c</fullName>
    <description>The Pardot grade is based on how well a prospect fits your organization's ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team's time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
    <label>Pardot Grade</label>
    <length>10</length>
    <type>Text</type>
</CustomField>