force-app/main/default/objects/Contact/fields/pi__utm_medium__c.field-meta.xml
<CustomField>
    <fullName>pi__utm_medium__c</fullName>
    <label>Google Analytics Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>