force-app/main/default/objects/Contact/fields/plaunch__favourite__c.field-meta.xml
<CustomField>
    <fullName>plaunch__favourite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Favourite contact</description>
    <label>favourite</label>
    <type>Checkbox</type>
</CustomField>