force-app/main/default/objects/Contact/fields/plaunch__Image__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Image__c</fullName>
    <label>Image</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>