force-app/main/default/objects/Contact/fields/plaunch__LastContact__c.field-meta.xml
<CustomField>
    <fullName>plaunch__LastContact__c</fullName>
    <label>LastContact</label>
    <type>DateTime</type>
</CustomField>