force-app/main/default/objects/Contact/fields/plaunch__LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>plaunch__LinkedIn__c</fullName>
    <description>LinkedIn Profile URL</description>
    <inlineHelpText>LinkedIn Profile URL</inlineHelpText>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>