force-app/main/default/objects/Contact/fields/plaunch__NumberOfPhoneCalls__c.field-meta.xml
<CustomField>
    <fullName>plaunch__NumberOfPhoneCalls__c</fullName>
    <description>number of phone calls made to this contact. maybe not going to be used in PL</description>
    <label>NumberOfPhoneCalls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>