force-app/main/default/objects/Contact/fields/plaunch__progress__c.field-meta.xml
<CustomField>
    <fullName>plaunch__progress__c</fullName>
    <defaultValue>0</defaultValue>
    <description>PipeLaunch Progress</description>
    <label>progress</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>