force-app/main/default/objects/Contact/fields/PreferredLanguage__c.field-meta.xml
<CustomField>
    <fullName>PreferredLanguage__c</fullName>
    <description>Contact's preferred communication language.</description>
    <inlineHelpText>Contact's preferred communication language.</inlineHelpText>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>Spanish</fullName>
                <isActive>false</isActive>
                <label>Spanish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>