force-app/main/default/objects/Contact/fields/SalesSupportBDR__c.field-meta.xml
<CustomField>
    <fullName>SalesSupportBDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales support (BDR)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Salesforce AEs</relationshipLabel>
    <relationshipName>SalesforceAEs</relationshipName>
    <type>Lookup</type>
</CustomField>