force-app/main/default/objects/Contact/fields/StartAsAE__c.field-meta.xml
<CustomField>
    <fullName>StartAsAE__c</fullName>
    <label>Start as AE</label>
    <type>Date</type>
</CustomField>