force-app/main/default/objects/Contact/fields/TeamPick__c.field-meta.xml
<CustomField>
    <fullName>TeamPick__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ESB</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>GRB</fullName>
            </value>
            <value>
                <fullName>MM</fullName>
            </value>
            <value>
                <fullName>CBU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>