force-app/main/default/objects/Contact/fields/Web_Form_Message__c.field-meta.xml
<CustomField>
    <fullName>Web_Form_Message__c</fullName>
    <description>Data captured via Pardot on the Contact Us webform</description>
    <label>Web Form Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>