force-app/main/default/objects/Contact/fields/WorkshopSurveyLinkAuto__c.field-meta.xml
<CustomField>
    <fullName>WorkshopSurveyLinkAuto__c</fullName>
    <formula>HYPERLINK(&quot;https://myempaua.secure.force.com/survey/TakeSurvey?id=&quot;&amp; $Label.WorkshopSurveyIDEnglish&amp;&quot;&amp;cId=&quot;&amp;Id&amp;&quot;&amp;caId=none&quot;,&quot;English Language Workshop Link&quot;) &amp;BR()&amp;
HYPERLINK(&quot;https://myempaua.secure.force.com/survey/TakeSurvey?id=&quot;&amp;$Label.WorkshopSurveyIDGerman&amp;&quot;&amp;cId=&quot;&amp;Id&amp;&quot;&amp;caId=none&quot;,&quot;German Language Workshop Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workshop Survey Link</label>
    <type>Text</type>
</CustomField>