force-app/main/default/objects/Contact/fields/XING__c.field-meta.xml
<CustomField>
    <fullName>XING__c</fullName>
    <label>XING</label>
    <type>Url</type>
</CustomField>