force-app/main/default/objects/Contact/recordTypes/BusinessContacts.recordType-meta.xml
<RecordType>
    <fullName>BusinessContacts</fullName>
    <active>true</active>
    <description>Contacts related to customer/partner accounts</description>
    <label>Business Contacts</label>
</RecordType>