force-app/main/default/objects/Contact/recordTypes/SalesforceStaffContacts.recordType-meta.xml
<RecordType>
    <fullName>SalesforceStaffContacts</fullName>
    <active>true</active>
    <description>Contacts related to Salesforce accounts</description>
    <label>Salesforce Staff Contacts</label>
</RecordType>