force-app/main/default/objects/Contact/validationRules/VR01_ProvidePhoneOrEmail.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_ProvidePhoneOrEmail</fullName>
    <active>true</active>
    <description>Phone, mobile phone or email must be provided to contact the contact.</description>
    <errorConditionFormula>$User.IsBypassVR__c = FALSE &amp;&amp;
ISBLANK(Phone) &amp;&amp;
ISBLANK(MobilePhone) &amp;&amp;
ISBLANK(Email)</errorConditionFormula>
    <errorMessage>Please provide phone, mobile phone or email in order to contact the contact. [VR01]</errorMessage>
</ValidationRule>